[package]
name = "logpack-derive-test"
version = "0.1.0"
authors = ["Dan Aloni <alonid@gmail.com>"]

[dependencies]
logpack = { path = "../logpack" }
logpack-derive = { path = "../logpack-derive" }
logpack-ron = { path = "../logpack-ron" }
ron = "*"
ansi_term = "*"
serde = "1.*"
serde_derive = "1.*"
